public/style.css
/* ... */
@media (min-width: 1280px){
  .container{
    max-width: 1280px;
  }
}

@media (min-width: 1536px){
  .container{
    max-width: 1536px;
  }
}

.static{
  position: static;
}

.fixed{
  position: fixed;
}

.absolute{
  position: absolute;
}

.relative{
  position: relative;
}

.sticky{
  position: sticky;
}

.bottom-0{
  bottom: 0px;
}

.left-0{
  left: 0px;
}

.right-0{
  right: 0px;
}

.top-0{
  top: 0px;
}

.top-3{
  top: 0.75rem;
}

.m-0{
  margin: 0px;
}

.m-20{
  margin: 5rem;
}

.m-4{
  margin: 1rem;
}

.mx-2{
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.mx-3{
  margin-left: 0.75rem;
  margin-right: 0.75rem;
}

.mx-4{
  margin-left: 1rem;
  margin-right: 1rem;
}

.mx-8{
  margin-left: 2rem;
  margin-right: 2rem;
}

.mx-auto{
  margin-left: auto;
  margin-right: auto;
}

.my-28{
  margin-top: 7rem;
  margin-bottom: 7rem;
}

.my-7{
  margin-top: 1.75rem;
  margin-bottom: 1.75rem;
}

.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.mb-10{
  margin-bottom: 2.5rem;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.mb-3{
  margin-bottom: 0.75rem;
}

.ml-5{
  margin-left: 1.25rem;
}

.mr-1{
  margin-right: 0.25rem;
}

.mr-2{
  margin-right: 0.5rem;
}

.mr-3{
  margin-right: 0.75rem;
}

.mt-10{
  margin-top: 2.5rem;
}

.mt-11{
  margin-top: 2.75rem;
}

.mt-14{
  margin-top: 3.5rem;
}

.mt-16{
  margin-top: 4rem;
}

.mt-32{
  margin-top: 8rem;
}

.mt-4{
  margin-top: 1rem;
}

.mt-6{
  margin-top: 1.5rem;
}

.mt-7{
  margin-top: 1.75rem;
}

.mt-8{
  margin-top: 2rem;
}

.box-border{
  box-sizing: border-box;
}

.block{
  display: block;
}

.flex{
  display: flex;
}

.inline-flex{
  display: inline-flex;
}

.hidden{
  display: none;
}

.h-12{
  height: 3rem;
}

.h-14{
  height: 3.5rem;
}

.h-4{
  height: 1rem;
}

.h-6{
  height: 1.5rem;
}

.h-fit{
  height: -moz-fit-content;
  height: fit-content;
}

.w-4{
  width: 1rem;
}

.w-6{
  width: 1.5rem;
}

.w-full{
  width: 100%;
}

.max-w-md{
  max-width: 28rem;
}

.flex-1{
  flex: 1 1 0%;
}

.flex-2{
  flex: 2 2 0%;
}

.-translate-y-6{
  --tw-translate-y: -1.5rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.scale-75{
  --tw-scale-x: .75;
  --tw-scale-y: .75;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform{
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.cursor-pointer{
  cursor: pointer;
}

.scroll-mt-24{
  scroll-margin-top: 6rem;
}

.list-outside{
  list-style-position: outside;
}

.list-disc{
  list-style-type: disc;
}

.list-square{
  list-style-type: square;
}

.appearance-none{
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
}

.flex-col{
  flex-direction: column;
}

.flex-wrap{
  flex-wrap: wrap;
}

.items-center{
  align-items: center;
}

.justify-center{
  justify-content: center;
}

.justify-between{
  justify-content: space-between;
}

.justify-around{
  justify-content: space-around;
}

.rounded{
  border-radius: 0.25rem;
}

.rounded-lg{
  border-radius: 0.5rem;
}

.rounded-b-lg{
  border-bottom-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.border{
  border-width: 1px;
}

.border-0{
  border-width: 0px;
}

.border-b{
  border-bottom-width: 1px;
}

.border-r{
  border-right-width: 1px;
}

.border-gray-300{
  --tw-border-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
}

.border-gray-400{
  --tw-border-opacity: 1;
  border-color: rgb(156 163 175 / var(--tw-border-opacity));
}

.border-r-white\/30{
  border-right-color: rgb(255 255 255 / 0.3);
}

.bg-\[\#3F3F3F\]{
  --tw-bg-opacity: 1;
  background-color: rgb(63 63 63 / var(--tw-bg-opacity));
}

.bg-blue{
  --tw-bg-opacity: 1;
  background-color: rgb(116 122 185 / var(--tw-bg-opacity));
}

.bg-light-background{
  --tw-bg-opacity: 1;
  background-color: rgb(241 241 241 / var(--tw-bg-opacity));
}

.bg-purple{
  --tw-bg-opacity: 1;
  background-color: rgb(149 91 159 / var(--tw-bg-opacity));
}

.bg-red-300{
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
}

.bg-transparent{
  background-color: transparent;
}

.bg-white{
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-gradient-to-b{
  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
}

.bg-gradient-to-r{
  background-image: linear-gradient(to right, var(--tw-gradient-stops));
}

.from-blue{
  --tw-gradient-from: #747AB9;
  --tw-gradient-to: rgb(116 122 185 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-gray-900{
  --tw-gradient-from: #111827;
  --tw-gradient-to: rgb(17 24 39 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-light-background{
  --tw-gradient-from: #F1F1F1;
  --tw-gradient-to: rgb(241 241 241 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.via-light-background\/30{
  --tw-gradient-to: rgb(241 241 241 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), rgb(241 241 241 / 0.3), var(--tw-gradient-to);
}

.to-gray-800{
  --tw-gradient-to: #1f2937;
}

.to-purple{
  --tw-gradient-to: #955B9F;
}

.to-white\/5{
  --tw-gradient-to: rgb(255 255 255 / 0.05);
}

.fill-current{
  fill: currentColor;
}

.p-0{
  padding: 0px;
}

.p-1{
  padding: 0.25rem;
}

.p-4{
  padding: 1rem;
}

.px-12{
  padding-left: 3rem;
  padding-right: 3rem;
}

.px-20{
  padding-left: 5rem;
  padding-right: 5rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-5{
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.px-6{
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}
/* ... */

